# uTag

./: .gitignore  CMakeLists.txt  README.md
3dparty/: CMakeLists.txt
3dparty/taglib/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  CommandEdit.cpp  CommandEdit.h  CoverImage.cpp  CoverImage.h  FileInfo.cpp  FileInfo.cpp.autosave  FileInfo.h  FileTable.cpp  FileTable.cpp.autosave  FileTable.h  ImageFile.h  Preferences.cpp  Preferences.h  Preferences.ui  TableView.cpp  TableView.h  errordialog.cpp  errordialog.h  errordialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
